--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My test page</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Welcome to our website!</h1>
+    <p>hello, world</p>
     <p>welcome to our website</p>
   </body>
 </html>
